--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,7 +5,7 @@
   "useTabs": false,
   "quoteProps": "as-needed",
   "trailingComma": "none",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "always",
   "endOfLine": "crlf"
