--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,7 +6,7 @@
   "quoteProps": "as-needed",
   "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "jsxBracketSameLine": true,
   "arrowParens": "always",
   "endOfLine": "crlf"
 }
