--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
     "babel-eslint": "^10.1.0",
+    "chart.js": "^2.9.4",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
+    "moment": "^2.29.1",
     "prettier": "^2.2.1",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "vue-chartjs": "^3.5.1"
   }
 }
