--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "productName": "Meme Stonks 🚀",
   "version": "0.0.1-alpha.1",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/borsTiHD/meme-stonks"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
